# example_cmake_embedded

./: CMakeLists.txt  README.md
include/: cmu.h  gpio.h
src/: CMakeLists.txt  cmu.c  main.c
system/: linker.ld  reset_handler.c  vector_table.S
